mwDev/mwDev/src/objects/mwJob__c.object
<CustomObject>
    <description>Object to hold Job for an Opportunity</description>
    <fields>
        <fullName>mwActualCosts__c</fullName>
        <label>Actual Costs</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mwActualDeliveryDateMostRecent__c</fullName>
        <label>Actual Delivery Date (MostRecent)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mwContractValue__c</fullName>
        <label>Contract Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mwCostsBudget__c</fullName>
        <label>Costs % Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>mwCustomerName__c</fullName>
        <formula>mwOpportunity__r.Cash_Customer_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mwCustomerReferenceNumber__c</fullName>
        <label>Customer Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mwCustomerRequestDate__c</fullName>
        <label>Customer Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mwDaysEarlyLate__c</fullName>
        <formula>IF( (TODAY()  -  mwJobRequiredDate__c) &gt; 0 , ( TODAY()  - mwJobRequiredDate__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days (Early)/Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mwEstimatedCosts__c</fullName>
        <label>EstimatedCosts</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mwExpCompletionDate__c</fullName>
        <label>Expected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mwJobClosedDate__c</fullName>
        <label>Job Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mwJobCreatedDate__c</fullName>
        <label>Job Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mwJobDeliveredDateFinal__c</fullName>
        <label>Job Delivered Date (Final)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mwJobInvoicedDate__c</fullName>
        <label>Job Invoiced Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mwJobNo__c</fullName>
        <externalId>true</externalId>
        <label>Job No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mwJobRequiredDate__c</fullName>
        <label>Job Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mwJobStatus__c</fullName>
        <label>Job Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mwOpportunityName__c</fullName>
        <formula>mwOpportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mwOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>mwJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mwSection__c</fullName>
        <formula>mwOpportunity__r.Section_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mwTimeAllowedtoComplete__c</fullName>
        <formula>mwJobRequiredDate__c  -  mwJobCreatedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Allowed to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Job</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>mw-{DD}-{MM}-{YY}-{00000}</displayFormat>
        <label>Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>